# mafia-re

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
common/: settings.h  types.h
engine/: hooks.h  main.cpp  main.h  version.cpp  version.h
injector/: CMakeLists.txt  dll.cpp  main.cpp
rw_data/: CMakeLists.txt  dta.cpp  dta.h  dta_ops.cpp  dta_ops.h  dta_read.cpp  dta_read.h  main.cpp  main.h
setup/: CMakeLists.txt  hw.cpp  hw.h  main.cpp  main.h  settings.cpp  settings.h
setup/res/: resource.h  setup.rc
